# gpt-oss-rs

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  DEFERRED_FRONTIER.md  DEFERRED_FRONTIER_RECON.md  DEFERRED_FRONTIER_SHAPE_AUDIT.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SLIDING_ATTENTION_FIRST_CASE.md  SLIDING_ATTENTION_FIRST_CASE_SUMMARY.md  docker-compose.yaml  install.sh  justfile  pyproject.toml  requirements.txt  tier2-warm-oracle-core-status.md  x-post.txt
crates/gpt-oss-api/: Cargo.toml
crates/gpt-oss-api/src/: error.rs  lib.rs  server.rs
crates/gpt-oss-attention/: Cargo.toml
crates/gpt-oss-attention/src/: backend.rs  buffer.rs  flash_attention.rs  flash_attention_impl.rs  lib.rs  mock.rs  paged_attention.rs  paged_attention_cuda.rs  sliding_window.rs  split_kv.rs
crates/gpt-oss-bench/: Cargo.toml
crates/gpt-oss-bench/benches/: sampling_bench.rs
crates/gpt-oss-bench/src/: lib.rs  pinned_prompt_official_launcher.rs  pinned_prompt_parity.rs
crates/gpt-oss-bench/tools/: create_restricted_probe_model_view.py  final_readout_direct_module_rerun.py  final_readout_norm_and_lm_head_compare.py  layer0_attention_o_proj_before_residual.py  layer0_attention_residual_add_before_mlp_after_o_proj_candidates.py  layer0_attention_weighted_v_sum_before_o_proj_after_probs_candidates.py  layer0_attn_norm_full_input_capture.py  layer0_attn_rmsnorm_all_token_bf16_replay.py  layer0_dense_k_semantics_sweep.py  layer0_dense_qkv_semantics_sweep.py  layer0_k_post_rope_and_score_after_onednn_k_candidate.py  layer0_k_projection_official_weight_arithmetic.py  layer0_k_projection_onednn_oracle_helper_proof.py  layer0_k_projection_onednn_oracle_scoped_helper_fix.py  layer0_k_projection_onednn_primitive_reproduction.py  layer0_k_projection_pytorch_bf16_linear_backend_policy.py  layer0_mlp_expert30_mlp1_before_swiglu.py  layer0_mlp_expert30_mlp2_before_bias.py  layer0_mlp_expert30_mlp2_bias_to_selected_output.py  layer0_mlp_expert30_swiglu_before_mlp2.py  layer0_mlp_norm_before_projections_after_attn_residual.py  layer0_mlp_residual_add_after_weighted_sum.py  layer0_mlp_router_logits_before_routing_after_norm.py  layer0_mlp_selected_expert_output_capture_readout_fix.py  layer0_mlp_selected_expert_output_capture_readout_localization.py  layer0_mlp_selected_expert_outputs_before_routing_weighted_sum.py  layer0_mlp_topk_routing_after_router_logits.py  layer0_mlp_weighted_expert_sum_before_residual.py  layer0_q_pre_post_rope_runtime_localization.py  layer0_q_projection_onednn_oracle_scoped_candidate.py  layer0_q_projection_weight_bias_arithmetic_policy.py  layer0_q_provenance_after_k_candidate_source_breakdown.py  layer0_v_projection_onednn_oracle_scoped_candidate.py  layer0_v_projection_weight_bias_arithmetic_policy.py  layer1_attention_ordered_bundle_compare.py  layer1_attn_norm_before_qkv_after_layer0.py  layer1_mlp_ordered_bundle_compare.py  layer2_to_final_coarse_layer_ladder_compare.py  lm_head_weight_layout_arithmetic_policy.py  pinned_prompt_official_capture.py  (+2 more)
crates/gpt-oss-config/: Cargo.toml
crates/gpt-oss-config/src/: lib.rs  model.rs  validation.rs
crates/gpt-oss-conformance/: Cargo.toml
crates/gpt-oss-conformance/src/: case.rs  harness.rs  lib.rs  report.rs  trace.rs
crates/gpt-oss-core/: Cargo.toml
crates/gpt-oss-core/src/: error.rs  lib.rs  types.rs
crates/gpt-oss-engine/: Cargo.toml
crates/gpt-oss-engine/src/: async_engine.rs  async_gpu_engine.rs  beam_search.rs  best_of_n.rs  engine.rs  gpu_engine.rs  gpu_metrics.rs  hf_snapshot.rs  lib.rs  output.rs  stop_checker.rs
crates/gpt-oss-engine/tests/: engine_regressions.rs
crates/gpt-oss-executor/: Cargo.toml
crates/gpt-oss-executor/src/: executor.rs  factory.rs  lib.rs  multi_gpu.rs  single_gpu.rs  tensor_parallel.rs
crates/gpt-oss-gpu/: Cargo.toml  build.rs
crates/gpt-oss-gpu/src/: cublas.rs  cublas_ops.rs  cublaslt_ops.rs  cuda_graph.rs  kernel_loader.rs  lib.rs
crates/gpt-oss-kv-cache/: Cargo.toml
crates/gpt-oss-kv-cache/src/: cache.rs  engine.rs  engine_cuda.rs  fp8_cache.rs  ops.rs  ops_cuda.rs
crates/gpt-oss-kv-model/: Cargo.toml
crates/gpt-oss-kv-model/src/: lib.rs
crates/gpt-oss-memory/: Cargo.toml
crates/gpt-oss-memory/src/: block.rs  cpu_pool.rs  gpu_pool.rs  lib.rs  pool.rs  swap.rs
crates/gpt-oss-model-loader/: Cargo.toml
crates/gpt-oss-model-loader/src/: gguf.rs  gpu_weights.rs  lib.rs  safetensors.rs  shard.rs  weights.rs
crates/gpt-oss-model-runner/: Cargo.toml
crates/gpt-oss-model-runner/src/: bridge.rs  device_map.rs  fused_f16.rs  gpu_layer.rs  gpu_runner.rs  lib.rs  mxfp4_validation.rs  rope_validation.rs  runner.rs  shard_plan.rs  sharded_resources.rs  tensor_parallel.rs
crates/gpt-oss-moe-semantics/: Cargo.toml
crates/gpt-oss-moe-semantics/src/: lib.rs
crates/gpt-oss-python/: Cargo.toml
crates/gpt-oss-python/src/: lib.rs
crates/gpt-oss-quant/: Cargo.toml
crates/gpt-oss-quant/src/: gemm.rs  lib.rs  linear.rs
crates/gpt-oss-reference/: Cargo.toml
crates/gpt-oss-reference/src/: attention.rs  cache.rs  executor.rs  lib.rs  moe.rs  trace.rs
crates/gpt-oss-runtime-plan/: Cargo.toml
crates/gpt-oss-runtime-plan/src/: lib.rs
crates/gpt-oss-sampling/: Cargo.toml
crates/gpt-oss-sampling/benches/: sampling.rs
crates/gpt-oss-sampling/src/: batch.rs  gpu_logprobs.rs  gpu_sampler.rs  guided.rs  logit_processors.rs  math.rs  sampler.rs
crates/gpt-oss-semantics/: Cargo.toml
crates/gpt-oss-semantics/src/: lib.rs
crates/gpt-oss-sequence/: Cargo.toml
crates/gpt-oss-sequence/src/: group.rs  lib.rs  metadata.rs  sequence.rs  status.rs
crates/gpt-oss-server/: Cargo.toml
crates/gpt-oss-server/src/: lib.rs  main.rs  protocol_stream.rs  runtime_policy.rs  server.rs
crates/gpt-oss-server/tests/: e2e_test.rs  http_contract.rs
crates/gpt-oss-speculative/: Cargo.toml
crates/gpt-oss-speculative/src/: draft.rs  engine.rs  lib.rs  scheduler.rs
crates/gpt-oss-telemetry/: Cargo.toml
crates/gpt-oss-telemetry/src/: init.rs  lib.rs
crates/gpt-oss-worker/: Cargo.toml
crates/gpt-oss-worker/src/: config.rs  gpu_worker.rs  (+4 more)
(+343 files in other folders)
