[workspace]
resolver = "2"
members = [
    "crates/gpt-oss-core",
    "crates/gpt-oss-config",
    "crates/gpt-oss-gpu",
    "crates/gpt-oss-memory",
    "crates/gpt-oss-block-manager",
    "crates/gpt-oss-kv-cache",
    "crates/gpt-oss-attention",
    "crates/gpt-oss-tokenizer",
    "crates/gpt-oss-model-loader",
    "crates/gpt-oss-model-runner",
    "crates/gpt-oss-sampling",
    "crates/gpt-oss-scheduler",
    "crates/gpt-oss-sequence",
    "crates/gpt-oss-worker",
    "crates/gpt-oss-executor",
    "crates/gpt-oss-engine",
    "crates/gpt-oss-api",
    "crates/gpt-oss-quant",
    "crates/gpt-oss-speculative",
    "crates/gpt-oss-telemetry",
    "crates/gpt-oss-bench",
    "crates/gpt-oss-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "GPT-OSS inference in Rust"
repository = "https://github.com/m0at/gpt-oss-rs"
homepage = "https://github.com/m0at/gpt-oss-rs"
authors = ["m0at"]
readme = "README.md"
keywords = ["gpt-oss", "llm", "inference", "gpu", "transformer"]
categories = ["science", "concurrency", "hardware-support"]

[workspace.dependencies]
# Internal crates
gpt-oss-core = { path = "crates/gpt-oss-core" }
gpt-oss-config = { path = "crates/gpt-oss-config" }
gpt-oss-gpu = { path = "crates/gpt-oss-gpu" }
gpt-oss-memory = { path = "crates/gpt-oss-memory" }
gpt-oss-block-manager = { path = "crates/gpt-oss-block-manager" }
gpt-oss-kv-cache = { path = "crates/gpt-oss-kv-cache" }
gpt-oss-attention = { path = "crates/gpt-oss-attention" }
gpt-oss-tokenizer = { path = "crates/gpt-oss-tokenizer" }
gpt-oss-model-loader = { path = "crates/gpt-oss-model-loader" }
gpt-oss-model-runner = { path = "crates/gpt-oss-model-runner" }
gpt-oss-sampling = { path = "crates/gpt-oss-sampling" }
gpt-oss-scheduler = { path = "crates/gpt-oss-scheduler" }
gpt-oss-sequence = { path = "crates/gpt-oss-sequence" }
gpt-oss-worker = { path = "crates/gpt-oss-worker" }
gpt-oss-executor = { path = "crates/gpt-oss-executor" }
gpt-oss-engine = { path = "crates/gpt-oss-engine" }
gpt-oss-api = { path = "crates/gpt-oss-api" }
gpt-oss-quant = { path = "crates/gpt-oss-quant" }
gpt-oss-speculative = { path = "crates/gpt-oss-speculative" }
gpt-oss-telemetry = { path = "crates/gpt-oss-telemetry" }

# External dependencies
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
derive_more = { version = "1", features = ["display", "from", "into"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
clap = { version = "4", features = ["derive"] }
config = "0.14"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
rayon = "1.10"
rand = "0.8"
rand_chacha = "0.3"
half = { version = "2", features = ["serde", "bytemuck"] }
safetensors = "0.4"
tokenizers = "0.20"
criterion = "0.5"
utoipa = { version = "4", features = ["axum_extras"] }
tokio-util = "0.7"
tokio-stream = "0.1"
async-trait = "0.1"
parking_lot = "0.12"
dashmap = "6"
bytemuck = { version = "1", features = ["derive"] }
memmap2 = "0.9"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
anyhow = "1"
