[workspace]
resolver = "2"
members = [
    "crates/gpt-oss-core",
    "crates/gpt-oss-semantics",
    "crates/gpt-oss-gpu",
    "crates/gpt-oss-tokenizer",
    "crates/gpt-oss-model-runner",
    "crates/gpt-oss-engine",
    "crates/gpt-oss-bench",
    "crates/gpt-oss-server",
    "crates/gpt-oss-reference",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "GPT-OSS inference in Rust"
repository = "https://github.com/m0at/gpt-oss-rs"
homepage = "https://github.com/m0at/gpt-oss-rs"
authors = ["m0at"]
readme = "README.md"
keywords = ["gpt-oss", "llm", "inference", "gpu", "transformer"]
categories = ["science", "concurrency", "hardware-support"]

[workspace.dependencies]
# Internal crates
gpt-oss-core = { path = "crates/gpt-oss-core" }
gpt-oss-semantics = { path = "crates/gpt-oss-semantics" }
gpt-oss-gpu = { path = "crates/gpt-oss-gpu" }
gpt-oss-tokenizer = { path = "crates/gpt-oss-tokenizer" }
gpt-oss-model-runner = { path = "crates/gpt-oss-model-runner" }
gpt-oss-engine = { path = "crates/gpt-oss-engine" }
gpt-oss-reference = { path = "crates/gpt-oss-reference" }

# External dependencies
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
derive_more = { version = "1", features = ["display", "from", "into"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
clap = { version = "4", features = ["derive"] }
config = "0.14"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
rayon = "1.10"
rand = "0.8"
rand_chacha = "0.3"
half = { version = "2", features = ["serde", "bytemuck"] }
safetensors = "0.4"
tokenizers = "0.20"
criterion = "0.5"
utoipa = { version = "4", features = ["axum_extras"] }
tokio-util = "0.7"
tokio-stream = "0.1"
async-trait = "0.1"
parking_lot = "0.12"
dashmap = "6"
bytemuck = { version = "1", features = ["derive"] }
memmap2 = "0.9"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
anyhow = "1"
