[project]
name = "gpt-oss-rs"
version = "0.1.0"
description = "GPT-OSS-focused Rust inference bindings"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [{name = "m0at"}]
keywords = ["gpt-oss", "llm", "inference", "rust", "gpu", "cuda"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/m0at/gpt-oss-rs"
Repository = "https://github.com/m0at/gpt-oss-rs"
Documentation = "https://github.com/m0at/gpt-oss-rs"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "crates/gpt-oss-python/Cargo.toml"
features = ["pyo3/extension-module"]
