[package]
name = "gpt-oss-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
description = "OpenAI-compatible REST API layer for the gpt-oss-rs inference engine"
keywords = ["llm", "inference", "openai", "api", "vllm"]
categories = ["web-programming::http-server", "science"]

[features]
default = []
cuda = ["gpt-oss-gpu/cuda", "gpt-oss-engine/cuda"]

[dependencies]
gpt-oss-core.workspace = true
gpt-oss-config.workspace = true
gpt-oss-engine.workspace = true
gpt-oss-executor.workspace = true
gpt-oss-gpu.workspace = true
gpt-oss-sequence.workspace = true
gpt-oss-tokenizer.workspace = true
gpt-oss-telemetry.workspace = true
axum.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
utoipa.workspace = true
tower.workspace = true
tower-http.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
axum-test = "16"
tempfile = "3"
tokenizers.workspace = true
