[package]
name = "gpt-oss-attention"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
description = "Attention kernels and backends for the gpt-oss-rs inference engine"
keywords = ["llm", "inference", "attention", "flash-attention", "vllm"]
categories = ["science", "hardware-support"]

[features]
default = []
cuda = ["gpt-oss-gpu/cuda", "dep:cudarc"]

[dependencies]
gpt-oss-core.workspace = true
gpt-oss-gpu.workspace = true
# gpt-oss-kv-cache removed: gpu module was deleted upstream; GpuBuffer now local
# TODO: re-add once gpt-oss-kv-cache compiles with gpt-oss-gpu buffer types
thiserror.workspace = true
half.workspace = true
tracing.workspace = true
cudarc = { version = "0.19", features = ["driver", "cublas", "cuda-version-from-build-system"], optional = true }
