[package]
name = "gpt-oss-bench"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
gpt-oss-core.workspace = true
gpt-oss-engine.workspace = true
gpt-oss-tokenizer.workspace = true

[features]
default = []
cuda = ["gpt-oss-engine/cuda"]
cublaslt = ["cuda", "gpt-oss-engine/cublaslt"]

[dev-dependencies]
criterion.workspace = true
rayon.workspace = true
rand.workspace = true
rand_chacha.workspace = true

[[bench]]
name = "sampling_bench"
harness = false

[[bin]]
name = "live_cuda_parity"
path = "src/bin/live_cuda_parity.rs"
required-features = ["cuda"]

[[bin]]
name = "restricted_prefill_trace"
path = "src/bin/restricted_prefill_trace.rs"
required-features = ["cuda"]
