[package]
name = "gpt-oss-bench"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
cudarc = { version = "0.19", features = ["driver", "cublas", "f16"], optional = true }
half.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
gpt-oss-core.workspace = true
gpt-oss-engine.workspace = true
gpt-oss-model-runner.workspace = true
gpt-oss-tokenizer.workspace = true

[features]
default = []
cuda = ["dep:cudarc", "gpt-oss-engine/cuda"]
cublaslt = ["cuda", "gpt-oss-engine/cublaslt"]

[dev-dependencies]
criterion.workspace = true
rayon.workspace = true
rand.workspace = true
rand_chacha.workspace = true

[[bench]]
name = "sampling_bench"
harness = false

[[bin]]
name = "live_cuda_parity"
path = "src/bin/live_cuda_parity.rs"
required-features = ["cuda"]

[[bin]]
name = "restricted_prefill_trace"
path = "src/bin/restricted_prefill_trace.rs"
required-features = ["cuda"]

[[bin]]
name = "restricted_logit_diff"
path = "src/bin/restricted_logit_diff.rs"
required-features = ["cuda"]

[[bin]]
name = "runtime_forward_layer0_qkv_bf16_candidate_status"
path = "src/bin/runtime_forward_layer0_qkv_bf16_candidate_status.rs"
required-features = ["cuda"]

[[bin]]
name = "runtime_forward_layer0_qkv_bf16_branch_liveness_status"
path = "src/bin/runtime_forward_layer0_qkv_bf16_branch_liveness_status.rs"
required-features = ["cuda"]
