[package]
name = "gpt-oss-bench"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
gpt-oss-core.workspace = true
gpt-oss-engine.workspace = true
gpt-oss-gpu = { workspace = true, optional = true }
gpt-oss-model-runner = { workspace = true, optional = true }
gpt-oss-tokenizer.workspace = true
half.workspace = true

[features]
default = []
cuda = ["dep:gpt-oss-gpu", "dep:gpt-oss-model-runner", "gpt-oss-engine/cuda", "gpt-oss-gpu/cuda", "gpt-oss-model-runner/cuda"]
cublaslt = ["cuda", "gpt-oss-engine/cublaslt"]

[dev-dependencies]
criterion.workspace = true
rayon.workspace = true
rand.workspace = true
rand_chacha.workspace = true

[[bench]]
name = "sampling_bench"
harness = false

[[bin]]
name = "live_cuda_parity"
path = "src/bin/live_cuda_parity.rs"
required-features = ["cuda"]

[[bin]]
name = "restricted_prefill_trace"
path = "src/bin/restricted_prefill_trace.rs"
required-features = ["cuda"]

[[bin]]
name = "restricted_logit_diff"
path = "src/bin/restricted_logit_diff.rs"
required-features = ["cuda"]
