[package]
name = "gpt-oss-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
description = "Core inference engine orchestrating scheduling, execution, and streaming for gpt-oss-rs"
keywords = ["llm", "inference", "engine", "streaming", "vllm"]
categories = ["science", "asynchronous"]

[dependencies]
cudarc = { version = "0.19", features = ["driver", "cublas", "f16"], optional = true }
gpt-oss-core.workspace = true
gpt-oss-config.workspace = true
gpt-oss-tokenizer.workspace = true
gpt-oss-sequence.workspace = true
gpt-oss-executor.workspace = true
gpt-oss-telemetry.workspace = true
gpt-oss-quant.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
hf-hub = "0.4"
metrics-exporter-prometheus.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait.workspace = true
gpt-oss-worker = { workspace = true, optional = true }
gpt-oss-block-manager = { workspace = true, optional = true }

[features]
default = []
cuda = ["dep:cudarc", "dep:gpt-oss-worker", "dep:gpt-oss-block-manager", "gpt-oss-worker?/cuda"]
cublaslt = ["cuda", "gpt-oss-worker?/cublaslt"]

[dev-dependencies]
tempfile = "3"
tokenizers = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
serde_json.workspace = true
