[package]
name = "gpt-oss-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
description = "Core inference engine orchestrating scheduling, execution, and streaming for gpt-oss-rs"
keywords = ["llm", "inference", "engine", "streaming", "vllm"]
categories = ["science", "asynchronous"]

[dependencies]
cudarc = { version = "0.19", features = ["driver", "cublas", "f16"], optional = true }
gpt-oss-core.workspace = true
gpt-oss-gpu.workspace = true
gpt-oss-kv-model.workspace = true
gpt-oss-model-runner.workspace = true
gpt-oss-tokenizer.workspace = true
gpt-oss-runtime-plan.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
hf-hub = "0.4"
clap.workspace = true
config.workspace = true
half.workspace = true
metrics-exporter-prometheus.workspace = true
metrics.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
rand.workspace = true
memmap2.workspace = true
toml.workspace = true
axum.workspace = true

[features]
default = []
cuda = ["dep:cudarc", "gpt-oss-gpu/cuda", "gpt-oss-model-runner/cuda"]
cublaslt = ["cuda", "gpt-oss-gpu/cublaslt", "gpt-oss-model-runner/cublaslt"]

[dev-dependencies]
tempfile = "3"
tokenizers = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
serde_json.workspace = true
