[package]
name = "gpt-oss-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
description = "GPU and host memory management for the gpt-oss-rs inference engine"
keywords = ["llm", "inference", "memory", "gpu", "allocator"]
categories = ["memory-management", "hardware-support"]

[features]
default = []
cuda = ["gpt-oss-gpu/cuda"]

[dependencies]
gpt-oss-core.workspace = true
gpt-oss-gpu.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
tracing.workspace = true
