[package]
name = "gpt-oss-model-loader"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
description = "SafeTensors model loading for the gpt-oss-rs inference engine"
keywords = ["llm", "inference", "safetensors", "model", "vllm"]
categories = ["science", "encoding"]

[features]
default = []
cuda = ["gpt-oss-gpu/cuda", "dep:cudarc", "dep:half"]

[dependencies]
gpt-oss-core.workspace = true
gpt-oss-gpu.workspace = true
safetensors.workspace = true
memmap2.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
cudarc = { version = "0.19", features = ["driver"], optional = true }
half = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3"
