[package]
name = "gpt-oss-model-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
description = "Model execution and forward pass orchestration for the gpt-oss-rs inference engine"
keywords = ["llm", "inference", "model-runner", "forward-pass", "vllm"]
categories = ["science", "hardware-support"]

[features]
default = []
cuda = ["gpt-oss-gpu/cuda", "gpt-oss-attention/cuda", "gpt-oss-model-loader/cuda", "gpt-oss-kv-cache/cuda", "dep:cudarc"]
cublaslt = ["cuda", "gpt-oss-gpu/cublaslt"]

[dependencies]
gpt-oss-core.workspace = true
gpt-oss-gpu.workspace = true
gpt-oss-attention.workspace = true
gpt-oss-kv-cache.workspace = true
gpt-oss-model-loader.workspace = true
thiserror.workspace = true
half.workspace = true
tracing.workspace = true
cudarc = { version = "0.19", features = ["driver", "cublas", "f16", "cuda-version-from-build-system"], optional = true }
