[package]
name = "gpt-oss-model-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
description = "Model execution and forward pass orchestration for the gpt-oss-rs inference engine"
keywords = ["llm", "inference", "model-runner", "forward-pass", "vllm"]
categories = ["science", "hardware-support"]

[features]
default = []
cuda = ["gpt-oss-gpu/cuda", "dep:cudarc"]
cublaslt = ["cuda", "gpt-oss-gpu/cublaslt"]

[dependencies]
gpt-oss-core.workspace = true
gpt-oss-semantics.workspace = true
gpt-oss-gpu.workspace = true
gpt-oss-moe-semantics.workspace = true
thiserror.workspace = true
half.workspace = true
tracing.workspace = true
bytemuck.workspace = true
memmap2.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rayon.workspace = true
safetensors.workspace = true
serde.workspace = true
serde_json.workspace = true
cudarc = { version = "0.19", features = ["driver", "cublas", "f16", "nccl", "cuda-version-from-build-system"], optional = true }

[dev-dependencies]
tempfile = "3"
