[package]
name = "gpt-oss-moe-semantics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
description = "Canonical GPT-OSS MoE routing semantics"
keywords = ["gpt-oss", "moe", "semantics", "llm"]
categories = ["science", "concurrency"]

[dependencies]
serde.workspace = true
thiserror.workspace = true

