[package]
name = "gpt-oss-python"
version.workspace = true
edition.workspace = true

[lib]
name = "gpt_oss_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
gpt-oss-core.workspace = true
gpt-oss-config.workspace = true
gpt-oss-sampling.workspace = true
gpt-oss-tokenizer.workspace = true
gpt-oss-engine.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
serde_json = "1"
rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
