[package]
name = "gpt-oss-sampling"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
description = "Token sampling strategies (top-k, top-p, beam search) for gpt-oss-rs"
keywords = ["llm", "inference", "sampling", "top-k", "vllm"]
categories = ["algorithms", "science"]

[features]
default = []
cuda = ["gpt-oss-gpu/cuda"]

[dependencies]
gpt-oss-core.workspace = true
gpt-oss-gpu.workspace = true
rand.workspace = true
rand_chacha.workspace = true
thiserror.workspace = true
rayon.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "sampling"
harness = false
