[package]
name = "gpt-oss-sequence"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
description = "Sequence and request management for the gpt-oss-rs inference engine"
keywords = ["llm", "inference", "sequence", "vllm", "request"]
categories = ["science", "data-structures"]

[dependencies]
gpt-oss-core.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
