[package]
name = "gpt-oss-speculative"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
description = "Speculative decoding for accelerated inference in gpt-oss-rs"
keywords = ["llm", "inference", "speculative-decoding", "draft-model", "vllm"]
categories = ["algorithms", "science"]

[dependencies]
gpt-oss-core.workspace = true
gpt-oss-sequence.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
rand.workspace = true

# These deps are used via type imports but may not compile yet in the workspace.
# Uncomment when upstream crates stabilize:
# gpt-oss-engine.workspace = true
# gpt-oss-model-runner.workspace = true
# gpt-oss-sampling.workspace = true
